<resources>
    <string name="app_name">MohamedTonyTask</string>
    <string name="login">Login</string>
    <string name="create_user">Create User</string>
    <string name="first_name">First Name</string>
    <string name="mid_name">MidName</string>
    <string name="last_name">Last Name</string>
    <string name="user_name">User Name</string>
    <string name="user_pass">Password</string>
    <string name="confirm_pass">Confirm Password</string>
    <string name="user_email">Email</string>
    <string name="user_phone">Phone Number</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="user_gender">Gender</string>
    <string name="submit">Submit</string>

</resources>
